refactor: change find stop point